correzione della convenzione di denominazione delle classi e gestione delle eccezioni con ResourceNotFoundException